<package format="2">
  <name>gui_control</name>
  <version>0.1.0</version>
  <description> GUI controller using ROS </description>

  <maintainer email="yuki.asano3206@gmail.com">Yuki Asano</maintainer>
  <author email="yuki.asano3206@gmail.com">Yuki Asano</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
